--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -38,13 +38,16 @@
                     android:id="@+id/detail_high_textview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="21°"/>
+                    android:text="21°"
+                    android:textSize="72sp"
+                    android:fontFamily="sans-serif-light"/>
 
                 <TextView
                     android:id="@+id/detail_low_textview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="11°" />
+                    android:text="11°"
+                    android:textSize="36sp"/>
             </LinearLayout>
 
             <LinearLayout
