--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,6 +7,7 @@
     tools:showIn="@layout/activity_main">
 
     <ListView
+        style="@style/ForecastListStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/listview_forecast" />
